# transactional-messaging-patterns-with-aws-dynamodb-streams-sns-sqs-lambda

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.adoc  README.md  TODO.md  dev.py  docker-compose.yml  pyproject.toml
.github/workflows/: build-service--customers.yml  build-service--orders.yml  lambda-outbox-dynamodb-streams.yml  library-tomodachi-bootstrap.yml  library-transactional-messaging.yml  library-unit-of-work.yml  lint.yml  python-package.yml  service-customers.yml  service-orders.yml
aws-ecs-terraform/: README.md  alb.tf  vpc.tf
deploy-aws-ecs-terraform/: README.md  main.tf  service-customers.tf
deploy-terraform-aws-ecs/: .pre-commit-config.yaml  .pre-commit-config.yml  .tfsec.yml  README.adoc  README.md  tfsec.yml
deploy-terraform-aws-ecs/live/: alb.tf  ecs.tf  output.tf  provider.tf  service-customers.tf  service-orders.tf  variables.tf  vpc.tf
deploy/aws-ecs-terraform/: README.md  alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  service-customers.tf  service-orders.tf  variables.tf  vpc.tf
docs/: README.adoc
images/: AWS Idempotent Consumer.drawio  AWS Transaction Log Tailing.drawio  AWS Unit of Work DynamoDB.drawio
lambda-outbox-dynamodb-streams/: .pre-commit-config.yaml  Dockerfile  Dockerfile.package  README.adoc  README.md  dev.py  pyproject.toml
lambda-outbox-dynamodb-streams-sns/: .pre-commit-config.yaml  pyproject.toml
lambda-outbox-dynamodb-streams/tests/: conftest.py  fakes.py  test_create_dynamodb_streams_outbox.py
library-tomodachi-bootstrap/: .pre-commit-config.yaml  README.adoc  README.md  dev.py  pyproject.toml
library-tomodachi-bootstrap/examples/: Dockerfile  tomodachi_app.py
library-tomodachi-bootstrap/tests/: test_logger.py
library-tomodachi-outbox/: README.md  TODO.md  dev.py  pyproject.toml
library-tomodachi-outbox/tests/: conftest.py
library-tomodachi-transactional-outbox/: README.md  dev.py  pyproject.toml
library-tomodachi-transactional-outbox/tests/: conftest.py
library-tranasctional-outbox/: dev.py
library-transactional-messaging/: .pre-commit-config.yaml  README.adoc  README.md  dev.py  pyproject.toml
library-transactional-messaging/tests/: conftest.py  events.py  test_dynamodb_inbox_repository.py  test_dynamodb_outbox_repository.py  test_fake_inbox_repository.py  test_fake_outbox_repository.py  test_idempotent_consumer.py  test_models.py
library-transactional-outbox/: README.md  pyproject.toml
library-transactional-outbox/tests/: conftest.py  events.py  test_dynamodb_inbox_repository.py  test_dynamodb_outbox_repository.py  test_fake_inbox_repository.py  test_fake_outbox_repository.py  (+2 more)
library-unit-of-work/: .pre-commit-config.yaml  README.adoc  README.md  dev.py  pyproject.toml
library-unit-of-work/src/unit_of_work/: __init__.py
library-unit-of-work/src/unit_of_work/dynamodb/: __init__.py  session.py  uow.py
library-unit-of-work/tests/: conftest.py  test_dynamodb_session.py  test_dynamodb_unit_of_work.py  test_dynamodb_uow.py
outbox-dynamodb-streams/: README.md  __init__.py  outbox.py  utils.py
service-customers/: .pre-commit-config.yaml  Dockerfile  README.adoc  README.md  dev.py  pyproject.toml
service-customers/src/: tomodachi_transactional_outbox
service-customers/src/adapters/: clients.py  customer_repository.py  dynamodb.py  event_repository.py  inbox.py  outbox.py  publisher.py  repository.py  settings.py  sns.py
service-customers/src/customers/: commands.py  customer.py  domain.py  events.py  use_cases.py
service-customers/src/entrypoints/: tomodachi_app.py
service-customers/src/service_layer/: logger.py  response.py  topics.py  unit_of_work.py  use_cases.py  views.py
service-customers/tests/: conftest.py  fakes.py
service-customers/tests/e2e/: conftest.py  test_api.py
service-customers/tests/e2e/steps/: conftest.py  test_create_customer_feature.py  test_release_credit_feature.py  test_reserve_credit_feature.py
service-customers/tests/features/: conftest.py  create_customer.feature  credit_limit.feature  release_credit.feature  reserve_credit.feature
service-customers/tests/features/steps/: test_create_customer_feature.py  test_create_customer_steps.py  test_credit_limit_feature.py  test_release_credit_feature.py  test_reserve_credit_feature.py
service-customers/tests/integration/: conftest.py  test_customer_repository.py  test_unit_of_work.py  test_views.py
service-customers/tests/unit/: conftest.py  fakes.py  test_create_customer.py  test_domain.py  test_events.py  test_release_credit.py  test_reserve_credit.py  test_use_cases.py
service-orders/: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.adoc  README.md  dev.py  pyproject.toml
service-orders/src/adapters/: clients.py  dynamodb.py  event_repository.py  inbox.py  order_repository.py  outbox.py  settings.py  sns.py
service-orders/src/entrypoints/: middleware.py  tomodachi_app.py
service-orders/src/orders/: commands.py  domain.py  events.py  order.py
service-orders/src/service_layer/: logger.py  response.py  topics.py  unit_of_work.py  use_cases.py  views.py
service-orders/tests/: conftest.py  fakes.py
service-orders/tests/e2e/: conftest.py  test_api.py
service-orders/tests/e2e/features/: create_order.feature
service-orders/tests/e2e/steps/: conftest.py  test_cancel_order_feature.py  test_create_order_feature.py  test_order_credit_check_feature.py  test_order_validation_feature.py
service-orders/tests/features/: cancel_order.feature  conftest.py  create_order.feature  order_credit_check.feature  order_validation.feature
service-orders/tests/features/steps/: test_cancel_order_feature.py  test_create_order_feature.py  test_order_credit_check_feature.py
service-orders/tests/integration/: conftest.py  test_order_repository.py  test_unit_of_work.py  test_views.py
service-orders/tests/unit/: conftest.py  fakes.py  test_approve_order.py  test_cancel_order.py  test_create_order.py  test_domain.py  test_events.py  test_reject_order.py
terraform-transactional-messaging/: .tfsec.yml  README.adoc  README.md
terraform-transactional-outbox/: README.md
(+157 files in other folders)
