[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Filips Nastins <nastinsfilips@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
stockholm = "^0.5.5"
structlog = "^23.1.0"
tomodachi = "^0.25.0"
types-aiobotocore = { extras = ["dynamodb", "sns", "sqs"], version = "^2.5.2" }
uvloop = "^0.17.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
bandit = "^1.7.5"
black = "^23.7.0"
colorama = "^0.4.6"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.5.9"
flake8-executable = "^2.1.3"
flake8-isort = "^6.0.0"
flake8-junit-report = "^2.1.0"
flake8-literal = "^1.3.0"
flake8-no-pep420 = "^2.4.0"
flake8-picky-parentheses = "^0.5.0"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^1.7.2"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
flake8-use-pathlib = "^0.3.0"
flake8-warnings = "^0.4.0"
freezegun = "^1.2.2"
httpx = "^0.24.1"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = ">=3.3.3"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.277"
tomodachi-testcontainers = "^0.2.2"
busypie = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hooks = "dev:hooks"
format = "dev:format"
lint = "dev:lint"
test = "dev:test"
test-ci = "dev:test_ci"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/'

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.flake8]
ignore = ["ANN101", "ANN401", "BLK100", "E501", "LIT101", "PL123"]
literal-inline-quotes = "double"
literal-multiline-quotes = "double"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
junit_family = "xunit2"
testpaths = ["tests"]
norecursedirs = [".venv", "__pycache__", ".git"]
log_cli_level = "INFO"
