[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Filips Nastins <nastinsfilips@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
tomodachi = "^0.25.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
tomodachi-testcontainers = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-ci = "dev:test_ci"
