[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Filips Nastins <nastinsfilips@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
lambda-outbox-dynamodb-streams = { path = "../lambda-outbox-dynamodb-streams" }
stockholm = "^0.5.5"
structlog = "^23.1.0"
tomodachi = "^0.25.0"
tomodachi-bootstrap = { path = "../library-tomodachi-bootstrap" }
transactional-outbox = { path = "../library-transactional-outbox" }
types-aiobotocore = { extras = [
    "dynamodb",
    "iam",
    "lambda",
    "s3",
    "sns",
], version = "^2.6.0" }
unit-of-work = { path = "../library-unit-of-work" }
uvloop = "^0.17.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
bandit = "^1.7.5"
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.5.9"
flake8-executable = "^2.1.3"
flake8-isort = "^6.0.0"
flake8-junit-report = "^2.1.0"
flake8-literal = "^1.3.0"
flake8-no-pep420 = "^2.4.0"
flake8-picky-parentheses = "^0.5.0"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^1.7.2"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
flake8-use-pathlib = "^0.3.0"
flake8-warnings = "^0.4.0"
httpx = "^0.24.1"
isort = "^5.12.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"
ruff = "^0.0.277"
tomodachi-testcontainers = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "dev:format"
lint = "dev:lint"
test = "dev:test"
test-ci = "dev:test_ci"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/'

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.flake8]
ignore = ["ANN101", "ANN401", "BLK100", "E501", "LIT101", "PL123"]
literal-inline-quotes = "double"
literal-multiline-quotes = "double"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]
line-length = 120

[tool.pytest.ini_options]
log_level = "INFO"
env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    # Testcontainers configuration
    "DOCKER_BUILDKIT=1",
    "TOMODACHI_TESTCONTAINER_DOCKERFILE_PATH=./Dockerfile",
    "TOMODACHI_TESTCONTAINER_DOCKER_BUILD_CONTEXT=..",
]
